--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/oslerdiagnostics/jobs/4502561002'>Job Application for Data Scientist, Chemical & Medical Data Analysis at Osler Diagnostics</a></h5> 
+<p><span class="badge badge-light">Oxford</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -89,7 +93,7 @@
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/myokardia/job/oSmsbfwB'>MyoKardia, Inc. Careers - Principal, PV Data & Quality Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/myokardia/job/oSmsbfwB'>MyoKardia, Inc. Careers - Principal, PV Data & Quality Analyst</a></h5> 
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -199,7 +203,7 @@
 <p><span class="badge badge-light">Australia  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/upside/f9fb4434-08d2-4013-a592-1896d328087d'>Upside - Data Science Business Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/upside/f9fb4434-08d2-4013-a592-1896d328087d'>Upside - Data Science Business Analyst</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -211,7 +215,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
+<h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -219,11 +223,11 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=odssbfw2&__jvst=Employee+Referral&__jvsd=sSQvFhwE&__jvsc=Twitter&bid=no9bpMwo&jvi=odssbfw2,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=odssbfw2&__jvst=Employee+Referral&__jvsd=sSQvFhwE&__jvsc=Twitter&bid=no9bpMwo&jvi=odssbfw2,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/chownow/a4d0d7be-0f53-45cf-98f2-88726eefb8bd'>ChowNow  - Data Analyst, Revenue Operations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/chownow/a4d0d7be-0f53-45cf-98f2-88726eefb8bd'>ChowNow  - Data Analyst, Revenue Operations</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -235,7 +239,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nhv0oMwr'>Benefitfocus Careers - Data Analyst II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nhv0oMwr'>Benefitfocus Careers - Data Analyst II</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -247,11 +251,11 @@
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/statestitle/jobs/1938800'>Job Application for Sr. Data Analyst at States Title</a></h5> 
+<h5><a href='https://boards.greenhouse.io/statestitle/jobs/1938800'>Job Application for Sr. Data Analyst at States Title</a></h5> 
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -329,7 +333,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/l/en/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
+<h5><a href='https://searchmetrics.recruitee.com/l/en/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
       Technical Account Manager / Data Analyst (m/w/d) - Integrations & Reportings - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -375,7 +379,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
+<h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -427,7 +431,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -481,10 +485,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698307417-vice-president-director-data-analysis'>Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/benefitfocus/job/o88pbfwA'>Benefitfocus Careers - Data Analyst II</a></h5> 
-<p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
